--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -1,4 +1,5 @@
-.section-title {
+
+.page-navigation__title {
     color: var(--title-text-color);
 
     font-weight: 700;
@@ -10,7 +11,7 @@
     margin-top: 0;
     margin-bottom: 0;
 }
-.section-works__title {
+.works-title {
     color: var(--title-text-color);
 
     font-weight: 700;
