--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,111 +1,45 @@
-.btn {
-    list-style: none;
-    margin-top: 0;
-    margin-bottom: 0;
-
-    display: flex;
-    flex-wrap: wrap;
-    padding-left: 0;
-    padding-right: 0;
-    gap: 30px;
-
-        & .title {
-            color: var(--title-text-color);
-    
-            margin-top: 0;
-            margin-bottom: 4px;
-            font-weight: 700;
-            font-size: 18px;
-            line-height: 2;
-    }
-        & .subtitle {
-            font-size: 16px;
-            line-height: 1.9;
-            margin-top: 0;
-            margin-bottom: 0px;
-            color: var(--primart-text-color);
-       
-    }
-        & img {
-            margin-bottom: 0px; 
-          /*20*/
-    }
-        & .iteam {
-            background-color: var(--white-text-color);
-                &:nth-child(3n) {
-                    margin-right: 0px;
-            }
-                &:nth-last-child(-n + 3) {
-                    margin-bottom: 0;
-                
-            }
-                & img {
-                    Display: block;
-                    max-width: 100%;
-                    height: auto;
-            }
-       
-    }
-    
-}
-
-.buttons {
+.page-navigation__list {
     list-style: none;
     margin-top: 0;
     margin-bottom: 50px;
     margin-right: 0;
     margin-left: 0;
     padding-left: 0;
-
     display: flex;
     justify-content: center;
-        & .text {
-            color: var(--title-text-color);
-    
-            cursor: pointer;
-    
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 1.6;
-            margin-left: 8px;
-                
-                &:first-child  {
-                    margin-left: 0;
-                
-            }
-    }
-        & .btn-text {
-            padding-top: 6px;
-            padding-bottom: 6px;
-            padding-right: 22px;
-            padding-left: 22px;
-            background-color:var(--primary-button-color);
-            border-radius: 4px;
-            border-color: transparent;
-            transition: background-color 250ms var(--timing-function),color 250ms var(--timing-function);
-                &:hover,
-                &:focus {
-                    background-color: var(--accent-text-color);
-                    color: var(--white-text-color);
-        }
-        
-    }
-}
+  }
+.page-navigation__iteam {
+    color: var(--title-text-color);
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
+    margin-left: 8px;
+        &:first-child {
+            margin-left: 0;
+      }
+  }
 
-.section-site {
-margin-bottom: 94px;
-}
+.page-navigation__button {
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-right: 22px;
+    padding-left: 22px;
+    background-color: var(--primary-button-color);
+    border-radius: 4px;
+    border-color: transparent;
+    transition: background-color 250ms var(--timing-function), color 250ms var(--timing-function);
+        &:hover,
+        &:focus {
+            background-color: var(--accent-text-color);
+            color: var(--white-text-color);
+      }
+  }
+  
 
-.iteam-text {
-    border-right: 1px solid var(--border-color);
-    border-bottom: 1px solid var(--border-color);
-    border-left: 1px solid var(--border-color);
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 24px;
-    padding-right: 24px;
-    
-}
+
+
+
 
 
 
