--- a/sass/components/_overlay.scss
+++ b/sass/components/_overlay.scss
@@ -1,4 +1,21 @@
-.text-overlay {
+.overlay {
+    position: relative;
+    overflow: hidden;
+        &::before {
+            display: inline-block;
+            content: "";
+            background: rgba(33, 150, 243, 0.9);
+            position: absolute;
+            
+            width: 100%;
+            height: 100%;
+            transform: translateY(100%);
+            transition: transform 250ms var(--timing-function);
+       
+    }
+}
+
+.overlay__text {
     width: 322px;
     height: 168px;
     padding-left: 24px;
@@ -19,42 +36,4 @@
     transform: translateY(135%);
     transition: transform 250ms var(--timing-function);
 
-}
-.iteam-site:hover .text-overlay,
-.iteam-site:focus .text-overlay {
-    transform: translateX(0);
-}
-
-.img-overlay {
-    position: relative;
-    overflow: hidden;
-        &::before {
-            display: inline-block;
-            background: rgba(33, 150, 243, 0.9);
-            position: absolute;
-            content: "";
-            width: 100%;
-            height: 100%;
-            transform: translateY(100%);
-            transition: transform 250ms var(--timing-function);
-       
-    }
-}
-
-
-.iteam-site:hover .img-overlay::before,
-.iteam-site:focus .img-overlay::before {
-    transform: translateX(0);
-}
-
-
-.iteam-site {
-    display: block;
-    text-decoration: none;
-    transition: box-shadow 250ms var(--timing-function);
-        &:hover,
-        &:focus {
-            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-
-    }  
 }
