--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -6,25 +6,25 @@
     transition: fill 250ms var(--timing-function);
     }
     
-.section-clients__link {
+    .section-clients__link {
         fill: var(--color-link);
-        &:hover,
-        &:focus  {
-        border-color: var(--accent-text-color);
-        fill: var(--accent-text-color);
-        }
+            & {
+                display: flex;
+                border: 1px solid var(--color-link);
+                border-radius: 4px;
+                background-position: center;
+                width: 170px;
+                height: 92px;
+                justify-content: center;
+                align-items: center;
+                transition: border-color 250ms var(--timing-function), fill 250ms var(--timing-function);
+            }
 
-        .section-clients__iteam & {  
-            display: flex;
-             border: 1px solid var(--color-link);
-             border-radius: 4px;
-             background-position: center;
-             width: 170px;
-             height: 92px;
-             justify-content: center;
-             align-items: center;
-             transition: border-color 250ms var(--timing-function), fill 250ms var(--timing-function);
-             
-             
-         }
- }
+            &:hover,
+            &:focus {
+                border-color: var(--accent-text-color);
+                fill: var(--accent-text-color);
+          }
+      }
+      
+       
