--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,9 +1,7 @@
 .hero {
     max-width: 1600px;
-   
     background-color: #2F303A;
-    background-image: linear-gradient( to right , rgba(47, 48, 58, 0.4) , rgba(47, 48, 58, 0.4) ),
-        url(../images/hero-img.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-img.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -11,25 +9,22 @@
     padding-top: 200px;
     padding-bottom: 200px;
     margin: 0 auto;
+  }
+  .hero__title {
+    color: #FFFFFF;
+    margin-top: 0;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 696px;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+  }
 
-    & .hero-title {
-        color:#FFFFFF ;   
-        margin-top: 0;
-        margin-bottom: 30px;
-        margin-left: auto;
-        margin-right: auto;
-        width: 696px;
-         
-       font-weight: 900;
-       font-size: 44px;
-       line-height: 60px; 
-       letter-spacing: 0.06em;
-       text-transform: uppercase;
-   
-   }    
-}
-
-.hero-button {
+.hero__button {
     
     padding-top: 10px;
     padding-bottom: 10px;
