--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -25,7 +25,7 @@
     margin-bottom: 50px;
 }
 
-.section-team__title {
+.team-title {
     color: var(--title-text-color);
 
     font-weight: 700;
@@ -38,7 +38,7 @@
     margin-bottom: 0;
     margin-bottom: 50px;
 }
-.section-clients__title {
+.clients-title {
     color: var(--title-text-color);
 
     font-weight: 700;
@@ -52,7 +52,7 @@
     margin-bottom: 50px;
 }
 
-.card-social__title {
+.social-title {
     display: inline-block;
     font-family: inherit;
     font-size: 14px;
