--- a/sass/layouts/_footer-form.scss
+++ b/sass/layouts/_footer-form.scss
@@ -15,6 +15,11 @@
         background-color: transparent;    
     }
 }
+.card-subscribe__icon {
+    vertical-align: middle;
+    margin-left: 10px;
+     
+}
 .card-subscribe__label {
     font-family: 'Roboto';
     font-style: normal;
