--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -10,7 +10,7 @@
     padding-bottom: 200px;
     margin: 0 auto;
   }
-  .hero__title {
+  .hero-title {
     color: #FFFFFF;
     margin-top: 0;
     margin-bottom: 30px;
@@ -24,7 +24,7 @@
     text-transform: uppercase;
   }
 
-.hero__button {
+.hero-button {
     
     padding-top: 10px;
     padding-bottom: 10px;
