--- a/sass/layouts/_footer-icon.scss
+++ b/sass/layouts/_footer-icon.scss
@@ -1,4 +1,19 @@
-.card-social__link {
+.social {
+  margin-left: 70px;
+}
+.social-list {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+  }
+  
+.social-list__icon {
+    width: 20px;
+    height: 22px;
+    display: flex;
+    align-items: center;
+  }
+.social-list__link {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,8 +29,3 @@
     }  
 }
 
-.card-subscribe__icon {
-    vertical-align: middle;
-    margin-left: 10px;
-     
-}
