--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,21 +1,18 @@
-.section-team {
+.team {
     background: #F5F4FA;
-}
-.section-team__list {
+  }
+  
+.team-list {
     display: flex;
-        & .section-team__iteam:not(:last-child) {
-            margin-right: 30px;
-    }
-        & .section-team__iteam {
-        background-color: var(--white-text-color);
-    
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 0px 0px 4px 4px;
-    
-    }
-}
+    gap: 30px;
+  }
 
-.section-team__list .card__title {
+.team-list__iteam {
+    background-color: var(--white-text-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
+.card__title {
     color: var(--title-text-color);
 
     font-weight: 500;
@@ -36,7 +33,7 @@
     letter-spacing: 0.03em;
     margin-bottom: 16px;
 }
- .section-team__list .card {
+.card {
     padding-top: 30px;
     padding-bottom: 30px;
  }
