--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,7 +18,7 @@
 @import './layouts/header';
 @import './layouts/hero';
 
-// @import './layouts/works';
+@import './layouts/works';
 @import './layouts/benefits';
 @import './layouts/team';
 @import './layouts/clients';
